chore: set up `release` script

--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "version": "0.0.0",
   "author": "",
   "private": true,
-  "homepage": "https://github.com/actions/javascript-action#readme",
+  "homepage": "https://github.com/robingenz/firebase-cloud-storage-upload-action#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/actions/javascript-action.git"
+    "url": "git+https://github.com/robingenz/firebase-cloud-storage-upload-action.git"
   },
   "bugs": {
-    "url": "https://github.com/actions/javascript-action/issues"
+    "url": "https://github.com/robingenz/firebase-cloud-storage-upload-action/issues"
   },
   "keywords": [
     "GitHub",
@@ -28,7 +28,8 @@
     "format:write": "prettier --write **/*.mjs",
     "format:check": "prettier --check **/*.mjs",
     "package": "ncc build src/index.mjs --license licenses.txt",
-    "package:watch": "npm run package -- --watch"
+    "package:watch": "npm run package -- --watch",
+    "release": "commit-and-tag-version"
   },
   "license": "MIT",
   "dependencies": {
@@ -40,6 +41,7 @@
     "@babel/core": "^7.23.9",
     "@babel/preset-env": "^7.23.9",
     "@vercel/ncc": "^0.38.1",
+    "commit-and-tag-version": "^12.4.0",
     "prettier": "^3.2.4"
   }
 }
